tests/ui/unstable-feature_bound/unstable-feature-cross-crate-exact-symbol.fail.stderr
error: unstable feature `feat_moo` is used without being enabled.
  --> $DIR/unstable-feature-cross-crate-exact-symbol.rs:16:5
   |
LL |     Moo::foo();
   |     ^^^
   |
   = help: The feature can be enabled by adding `#![feature(feat_moo)]` to the crate root
   = note: required for `Moo` to implement `Foo`

error: aborting due to 1 previous error

